Fixed style for TOC nav on smaller screens and print

--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,40 @@ body {
     padding: 2px 10px;
 }
 
+/* Nav bar on top for smaller screens and print media */
+@media screen and (max-width : 1023px), print {
+    #container {
+        width: 100%;
+    }
+
+    #nav {
+        width: 100%;
+        margin-top: 10px;
+        float: none;
+    }
+
+    #nav #sections,
+    #nav #header,
+    #nav .extra {
+        padding-left: 30px;
+        padding-right: 30px;
+    }
+
+    #content {
+        -webkit-border-radius: 0;
+        -moz-border-radius: 0;
+        border-radius: 0;
+        border-width: 1px;
+        float: none;
+        margin: 0;
+        width: 100%;
+        -moz-box-sizing: border-box;
+        -webkit-box-sizing: border-box;
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        box-sizing: border-box;
+    }
+}
 
 /* Fixed nav bar for documents compiled by DocumentUp on desktops */
 @media screen and (min-width: 1024px) {
